--- a/Proyecto_SASS I/package.json
+++ b/Proyecto_SASS I/package.json
@@ -1,24 +1,24 @@
 {
   "name": "mi_repositorio",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "node-sass --include-path scss scss/style.scss css/style.css",
+    "build-css": "node-sass --include-path scss scss/style.scss css/style.css --output-style compressed",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/vareloshky/coder_house.git"
   },
-  "author": "",
+  "author": "varelosky",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/vareloshky/coder_house/issues"
   },
   "homepage": "https://github.com/vareloshky/coder_house#readme",
-  "dependencies": {
+  "description": "",
+  "devDependencies": {
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.15"
   }
